--- a/cmake/simple-launch-process-cpp-config.cmake.in
+++ b/cmake/simple-launch-process-cpp-config.cmake.in
@@ -14,7 +14,7 @@ set_and_check(SIMPLE_LAUNCH_PROCESS_CPP_LIBRARY_DIR "@PACKAGE_CMAKE_INSTALL_LIBD
 set(SIMPLE_LAUNCH_PROCESS_CPP_SHARED_LIBS_BUILT "@PACKAGE_BUILD_SHARED_LIBS@")
 
 # Our library dependencies (contains definitions for IMPORTED targets)
-include(@PACKAGE_CONFIG_EXPORT_DIR@/simple-launch-process-cpp-targets.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/simple-launch-process-cpp-targets.cmake)
 
 # These are IMPORTED targets created by simple-launch-process-cpp-targets.cmake
 set(SIMPLE_LAUNCH_PROCESS_CPP_LIBRARIES "simple-launch-process-cpp")
