--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake -DBUILD_TESTING=ON .. 
     - name: build
       run: |
         cd build
@@ -37,7 +37,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -G Ninja ..
+        cmake -G Ninja -DBUILD_TESTING=ON .. 
     - name: build
       run: |
         cd build
