--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: apt
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake python3-pip
+        sudo apt-get install -y build-essential cmake python3-pip python3-setuptools python3-wheel
     - name: pip
       run: |
         python3 -m pip install --user git+https://github.com/johnwason/drekar-launch-process.git
